
project(Chip8_Interpreter)

set(NAMESPACE_LABEL interpreter)
set(LIBRARY_ALIAS_NAME chip8::${NAMESPACE_LABEL})

file(GLOB_RECURSE FILES_HEADER include/${NAMESPACE_LABEL}/*.hpp)
file(GLOB_RECURSE FILES_INLINE include/${NAMESPACE_LABEL}/*.inl)
file(GLOB_RECURSE FILES_SOURCE src/*.cpp)

source_group(TREE ${PROJECT_SOURCE_DIR} FILES ${FILES_HEADER} ${FILES_INLINE} ${FILES_SOURCE})

add_library(${PROJECT_NAME} STATIC ${FILES_HEADER} ${FILES_INLINE} ${FILES_SOURCE})
add_library(${LIBRARY_ALIAS_NAME} ALIAS ${PROJECT_NAME})

set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
